ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2219,22 +2219,6 @@ img {
 	}
 	.container > .navbar-collapse {
 		float: right;
-		width: 50% !important;
-	}
-	.navbar-nav {
-		float: right;
-		width: 100% !important;
-	}
-	.navbar-nav > li {
-		width: auto;
-	}
-	.navbar-default .navbar-nav > li > a {
-		white-space: nowrap;
-		line-height: 26px;
-		padding: 16px 20px;
-	}
-	.container > .navbar-header {
-		border-bottom: none;
 	}
 	#controls,
 	.whiteAngle,
@@ -2435,6 +2419,25 @@ img {
 	}
 	.hero.left > div.inner h3 {
 		width: 72%;
+	}
+	.container > .navbar-collapse {
+		float: right;
+		width: 50% !important;
+	}
+	.navbar-nav {
+		float: right;
+		width: 100% !important;
+	}
+	.navbar-nav > li {
+		width: auto;
+	}
+	.navbar-default .navbar-nav > li > a {
+		white-space: nowrap;
+		line-height: 26px;
+		padding: 16px 20px;
+	}
+	.container > .navbar-header {
+		border-bottom: none;
 	}
 }
  
